--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,3 +6,14 @@
     <%= f.submit "Add to cart" %>
   <% end %></p>
 <% end %>
+
+<% @booklist.each do |book| %>
+  <div class="container">
+    <p><%= book['rank'] %></p>
+    <img src="<%= book['book_image'] %>" alt="book">
+    <p><%= book['title'] %></p>
+    <p><%= book['author'] %></p>
+    <p><%= book['description'] %></p>
+    <p><%= book['book_review_link'] %></p>
+  </div>
+<% end %>
